name:                transform-idl
version:             0.1.0.0
-- synopsis:            
-- description:         
license:        BSD3
-- license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >= 1.10

flag                  small_base
  description:        Choose the new, split-up base package.


-- executable handsome
--  main-is: handtest.hs         
  -- main-is:  RFC2616.hs 
  -- other-modules:       
--  build-depends:       containers, base ==4.6.*, HandsomeSoup, bytestring, hxt, charset, parsec3,
--                       QuickCheck >= 2.0, doctest >= 0.9.7

--  hs-source-dirs:     src

executable extract-idl
  main-is: ExtractIdl.hs
  default-language:   Haskell2010
  -- main-is:  RFC2616.hs 
  -- other-modules:       
  build-depends:       containers, base ==4.6.*, HandsomeSoup, hxt, 
                       QuickCheck >= 2.0, doctest >= 0.9.7

  hs-source-dirs:      src/extract-idl


-- executable demo
--  main-is: WebIdl/Demo.hs
--  default-language:   Haskell2010
--  hs-source-dirs:     src/webidl
--  build-depends:      containers, base ==4.6.*, transform-idl

library
  exposed-modules:    WebIdl
                      WebIdl.Parser
                      WebIdl.Ast
                      WebIdl.Lex
                      WebIdl.Helper
                      WebIdl.Demo
                      WebIdl.PrettyPrint

  build-depends:       containers, base ==4.6.*, parsec3,
                       QuickCheck >= 2.0, doctest >= 0.9.7, syb > 0.4.0

  hs-source-dirs:     src/webidl

  default-language:   Haskell2010

test-suite            doctests
  type:               exitcode-stdio-1.0
  -- type:               detailed-0.9

  main-is:            doctests.hs

  default-language:   Haskell2010

  build-depends:      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , parsec3

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:     src/test
